--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="0dp"
-    app:cardBackgroundColor="@color/purple_500">
+    app:cardBackgroundColor="@color/red">
 
     <RelativeLayout
         android:layout_width="match_parent"
