Commit textos saiba mais e orientações

--- a/app/src/main/res/layout/activity_saiba_mais.xml
+++ b/app/src/main/res/layout/activity_saiba_mais.xml
@@ -19,9 +19,30 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Saiba Mais"
-            android:textSize="50sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/app_saiba_mais"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:text="@string/app_texto_saiba_mais"
+            android:padding="50dp"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/app_slogan"
+            android:padding="30dp"
+            android:textSize="25sp"
             android:textStyle="bold"
             android:gravity="center"/>
 
