--- a/app/src/main/res/layout/activity_orientacoes.xml
+++ b/app/src/main/res/layout/activity_orientacoes.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context=".About">
+    tools:context=".Orientacoes">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,9 +19,30 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="About"
-            android:textSize="50sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/app_orientacoes"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:text="@string/app_texto_orientacoes"
+            android:padding="50dp"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/app_slogan"
+            android:padding="30dp"
+            android:textSize="25sp"
             android:textStyle="bold"
             android:gravity="center"/>
 
