--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,14 @@
             android:textStyle="bold"
             app:cornerRadius="20dp" />
 
+        <ImageView
+            android:id="@+id/idFoto"
+            android:layout_width="200dp"
+            android:layout_height="300dp"
+            tools:srcCompat="@tools:sample/avatars"
+            android:padding="20dp"
+            android:layout_gravity="center"/>
+
     </LinearLayout>
 
     <RelativeLayout
