--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,11 +41,17 @@
 
         <ImageView
             android:id="@+id/idFoto"
-            android:layout_width="200dp"
-            android:layout_height="300dp"
+            android:layout_width="100dp"
+            android:layout_height="200dp"
             tools:srcCompat="@tools:sample/avatars"
             android:padding="20dp"
             android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="10dp"
+            android:id="@+id/txtBase64"/>
 
     </LinearLayout>
 
