--- a/app/src/main/res/layout/activity_saiba_mais.xml
+++ b/app/src/main/res/layout/activity_saiba_mais.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/app_saiba_mais"
-            android:textSize="40sp"
+            android:textSize="40dp"
             android:textStyle="bold"
             android:gravity="center"/>
 
@@ -31,8 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="@string/app_texto_saiba_mais"
-            android:padding="50dp"
-            android:textSize="22sp"
+            android:padding="40dp"
+            android:textSize="22dp"
             android:textStyle="bold"
             android:gravity="center"/>
 
@@ -42,22 +42,21 @@
             android:layout_marginTop="10dp"
             android:text="@string/app_slogan"
             android:padding="10dp"
-            android:textSize="25sp"
+            android:textSize="25dp"
             android:textStyle="bold"
             android:gravity="center"/>
 
         <Button
             android:id="@+id/btSaibaMaisVoltar"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:height="80dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:height="70dp"
             android:backgroundTint="@color/red"
             android:text="Voltar"
             android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textSize="22dp"
             android:textStyle="bold"
             app:cornerRadius="20dp" />
 
