--- a/app/src/main/res/layout/item_drawer_main.xml
+++ b/app/src/main/res/layout/item_drawer_main.xml
@@ -7,6 +7,7 @@
     android:padding="12dp"
     android:background="?selectableItemBackground"
     android:textColor="@color/grey"
-    android:textStyle="bold">
+    android:textStyle="bold"
+    android:textSize="18dp">
 
 </TextView>
