--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -14,8 +14,18 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="120dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/foto_pessoa"/>
+            android:layout_marginTop="20dp"
+            android:backgroundTint="@color/white"
+            android:src="@drawable/foto_pessoa" />
+
+        <TextView
+            android:id="@+id/textNome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/grey"
+            android:textSize="35dp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
@@ -29,7 +39,6 @@
             android:id="@+id/recycler_view"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            android:layout_marginTop="8dp"
             tools:listitem="@layout/item_drawer_main"/>
 
     </LinearLayout>
