--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
         <ImageView
             android:id="@+id/idFoto"
-            android:layout_width="100dp"
+            android:layout_width="200dp"
             android:layout_height="200dp"
             tools:srcCompat="@tools:sample/avatars"
             android:padding="20dp"
@@ -50,6 +50,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:textSize="20dp"
             android:id="@+id/txtBase64"/>
 
